# Nutrition-Tracker

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  PORTS.md  README.md  SPEC.md  TEST-ACCOUNTS.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  seed_db.py  seed_test_accounts.py
backend/alembic/: env.py
backend/alembic/versions/: 20260426_021812_refresh_tokens_role_apple.py  20260625_000001_meal_items_client_item_id.py  20260625_000002_meal_idempotency_unique_constraints.py  20260626_000001_baseline_schema.py
backend/app/: main.py
backend/app/api/v1/: auth.py  exercises.py  goals.py  meal_plans.py  meals.py  nutrition.py  products.py  profile.py  router.py  users.py  workouts.py
backend/app/core/: config.py  database.py  datetime_utils.py  deps.py  http.py  rate_limit.py  security.py
backend/app/models/: __init__.py  exercise.py  goal.py  meal.py  meal_plan.py  nutrition.py  product.py  refresh_token.py  shopping_list.py  user.py  user_profile.py  workout.py
backend/app/schemas/: auth.py  exercise.py  meal.py  meal_plan.py  nutrition.py  product.py  profile.py  shopping.py  workout.py
backend/app/services/: apple_verifier.py  food_recognition.py  nutrition_calc.py  product_lookup.py  shopping_list.py  tdee_calculator.py  workout_service.py
backend/data/: seed_exercises.json  seed_programs.json
backend/scripts/: export_tdee_fixtures.py
backend/tests/: conftest.py  test_api_profile.py  test_auth.py  test_auth_apple.py  test_auth_logout.py  test_auth_rate_limit.py  test_auth_refresh.py  test_auth_refresh_concurrency.py  test_datetime_tz.py  test_exercises.py  test_food_recognition.py  test_goals.py  test_idor.py  test_meal_plans.py  test_meals.py  test_meals_log.py  test_migrations.py  test_nutrition.py  test_nutrition_recognize.py  test_products.py  test_products_rate_limit.py  test_profile.py  test_shared_http_client.py  test_tdee.py  test_token_expiry.py  test_users_delete.py  test_workouts.py
docs/: PRD.md  USER-STORY-MAP.md
frontend/: Dockerfile  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
(+232 files in other folders)
