[project]
name = "nutrition-tracker-api"
version = "1.0.0"
description = "FastAPI nutrition tracker backend with barcode scanning and multi-source food lookup"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.25",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "pyjwt[crypto]>=2.8",
    "bcrypt>=4.0,<5.0",
    "email-validator>=2.1",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.28",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# E/F = pycodestyle/pyflakes; I = isort.
# DTZ003 specifically forbids `datetime.datetime.utcnow()` which is deprecated
# in Python 3.12+. All timestamps must use `datetime.now(timezone.utc)` to
# preserve timezone information. See Slice 9.1.
select = ["E", "F", "I", "DTZ003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
